--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@reduxjs/toolkit": "^2.5.1",
+        "@reduxjs/toolkit": "^2.5.0",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -19,6 +19,7 @@
         "react-redux": "^9.2.0",
         "react-scripts": "^5.0.1",
         "typescript": "^4.9.5",
+        "uuid": "^11.0.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
