--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.2.0",
+        "react-router": "^7.2.0",
         "react-scripts": "^5.0.1",
+        "react-spinners": "^0.15.0",
+        "react-toastify": "^11.0.5",
         "typescript": "^4.9.5",
         "uuid": "^11.0.5",
         "web-vitals": "^2.1.4"
