--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "react-burger",
     "version": "0.1.0",
     "private": true,
+    "homepage": "./",
     "dependencies": {
         "@reduxjs/toolkit": "^2.5.0",
         "@testing-library/jest-dom": "^5.17.0",
@@ -17,19 +18,22 @@
         "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.2.0",
-        "react-router": "^7.2.0",
+        "react-router": "^7.1.1",
         "react-scripts": "^5.0.1",
         "react-spinners": "^0.15.0",
-        "react-toastify": "^11.0.5",
+        "react-toastify": "^11.0.3",
         "typescript": "^4.9.5",
-        "uuid": "^11.0.5",
+        "uuid": "^11.0.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "cypress:open": "./node_modules/.bin/cypress open",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -48,5 +52,12 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "cypress": "^14.2.0",
+        "eslint-config-react-app": "^7.0.1",
+        "fetch-mock": "^12.5.2",
+        "gh-pages": "^6.3.0",
+        "redux-mock-store": "^1.5.5"
     }
 }
